Changed some CSS -- most notably font size -- for top 5 lists to fix bug that occured when a metro name would overflow onto the next line

--- a/src/styles/sitewide/index.scss
+++ b/src/styles/sitewide/index.scss
@@ -7,12 +7,6 @@
   color: rgb(25,200,25);
 }
 
-.duck {
-  display: block;
-  width: 100%;
-  margin-top: 1.5rem;
-}
-
 .topFive {
 	display:block;
 }
@@ -20,15 +14,17 @@
 .msa{
 	width:100%;
 	cursor: pointer;
+  font-size:12px;
 }
-
+.name{
+  float:left;
+  width:75%;
+  margin:2px 0px;
+}
 .score {
 	float:right;
 	position: relative;
-}
-
-.name {
-	width:75%;
+  margin:2px 0px;
 }
 
 .text-div {
